# PyBind_CUDA_minimal_exemple

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.py
src/: main.cu
